force-app/main/default/objects/Merchandise__c/Merchandise__c.object-meta.xml
<CustomObject>
    <label>商品</label>
    <nameField>
        <label>商品名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>商品</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>