force-app/main/default/objects/Merchandise__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>レディース</fullName>
            </value>
            <value>
                <fullName>メンズ</fullName>
            </value>
            <value>
                <fullName>キッズ</fullName>
            </value>
            <value>
                <fullName>ギア</fullName>
            </value>
            <value>
                <fullName>電気製品</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>