force-app/main/default/objects/Merchandise__c/fields/Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL__c</fullName>
    <label>画像URL</label>
    <type>Url</type>
</CustomField>