force-app/main/default/objects/Merchandise__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>価格</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>