force-app/main/default/objects/Merchandise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>すべての商品</label>
</ListView>